noinst_LTLIBRARIES= libIMdkit.la

libIMdkit_la_CFLAGS =  \
    @X_CFLAGS@

libIMdkit_la_SOURCES= FrameMgr.c IMValues.c i18nIMProto.c i18nPtHdr.c i18nX.c \
	IMConn.c i18nAttr.c i18nIc.c IMMethod.c i18nClbk.c i18nMethod.c \
	i18nUtil.c \
	FrameMgr.h i18nClbk.h i18nIc.h i18nPtHdr.h i18nUtil.h IMdkit.h \
	regstflt.h Xi18n.h Xi18nTr.h Xi18nX.h XimFunc.h XimProto.h Xtrans.h

EXTRA_DIST = doc
