AM_CPPFLAGS = -Wall -I../vnconv -I../byteio

noinst_LTLIBRARIES = libUnikey.la
##libUnikey_la_LIBADD = ../vnconv/libvnconv.la

libUnikey_la_SOURCES = \
	ukengine.cpp \
	ukengine.h \
	unikey.cpp \
	mactab.cpp \
	mactab.h \
	inputproc.cpp \
	usrkeymap.cpp \
	usrkeymap.h \
	vnlexi.h \
	unikey.h \
	keycons.h \
	inputproc.h

