AM_CPPFLAGS = -Wall -I../vnconv -I../byteio

noinst_LTLIBRARIES = libUnikey.la
libUnikey_la_LIBADD = ../vnconv/libvnconv.la

libUnikey_la_SOURCES = \
	ukengine.cpp \
	ukengine.h \
	mactab.cpp \
	mactab.h \
	inputproc.cpp \
	usrkeymap.cpp \
	stdafx.cpp \
	usrkeymap.h \
	vnlexi.h \
	keycons.h \
	inputproc.h \
	stdafx.h

